--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
-h1 {
+#app-title-div {
     border: 2px solid black;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
+
