--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,11 @@
 /* APP TITLE */
 .h1-title-title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Handlee', cursive;
+    font-size: 80px;
     border: 2px solid black;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
 }
-
 
 
 
@@ -16,6 +15,17 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+/* ROOM PAGE NAV */
+
+.room-name-li {
+    display: inline-block;
+    font-size: 30px;
+    font-style: bold;
+    padding: 50px;
+    color: #a3de83;
+    text-align: center ;
+    
+}
 
 
 
