--- a/styles/main.css
+++ b/styles/main.css
@@ -12,8 +12,8 @@
 /* ROOM PAGE */
 #furniture-grid-div {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 40px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 50px;
 }
 
 /* ROOM PAGE NAV */
@@ -22,24 +22,24 @@
 }
 
 .room-name-li {
-    font-family: 'Architects Daughter', cursive;
+  font-family: "Montserrat";
     display: inline-block;
     font-display: center;
-    font-size: 40px;
+    font-size: 30px;
     padding: 15px 30px;
     margin: auto;
     color: white;
   }
 
   .room-name-li:hover {
-    font-size: 70px;
+    font-family: 'Architects Daughter', cursive;
+    color: #61c0bf;
   }
 
   .room-name-title {
     font-family: 'Handlee', cursive;
-    font-size: 40px;
+    font-size: 55px;
     color: #ffb6b9;
-    /* opacity: 0.6; */
     text-align: center;
   }
 
@@ -48,9 +48,9 @@
 /* FURNITURE ITEM FLIP CARDS */
 .flip-card {
     background-color: transparent;
-    width: 430px;
+    width: 450px;
     height: 470px;
-    border: 2px solid black;
+    border: 2px solid #fae3d9;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
   
@@ -91,7 +91,7 @@
     font-size: 20px;
     opacity: 0.9;
     color:rgb(40, 38, 38);
-    font-family: 'Handlee', cursive;
+    font-family: "Montserrat";
     transform: rotateY(180deg);
   }
 
@@ -101,10 +101,19 @@
   }
 
   /* STYLE ADD AN ITEM/FURNITURE BUTTON */
+
+#modal-div-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #add-furniture-button-color {
+  font-family: 'Montserrat';
   background-color: #61c0bf;
   border-color: #61c0bf;
-  width: 50%;
+  width: 30%;
+  position: relative;
 }
 
 /* STYLE UPDATE FURNITURE SUBMIT BUTTON */
@@ -115,3 +124,23 @@
 }
 
 
+
+/* STYLE MODAL FURNITURE FORM  */
+
+#modal-label-title {
+  font-style: bold;
+}
+
+#modal-content-background-color {
+  background-color: #bbded6;
+  font-family: 'Montserrat';
+  color:rgb(40, 38, 38);
+  border-color: white;
+}
+
+#modal-submit-furniture{
+  background-color: #61c0bf;
+  color: white;
+  border-color: #61c0bf;
+  border-radius: 5px;
+}
